--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 <html>
 <head>
     <title>Flash Shop</title>
-    <link rel="stylesheet" media="screen" href="/assets/stylesheets/main.css">
-    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="stylesheet" media="screen" href="/public/assets/stylesheets/main.css">
+    <link rel="shortcut icon" type="image/png" href="/public/assets/images/favicon.png">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js">  </script>
-    <script src="/assets/javascripts/controllers.js" type="text/javascript"></script>
+    <script src="/public/assets/javascripts/controllers.js" type="text/javascript"></script>
 </head>
 <body>
 
 <div class="shopping-area" ng-app="shoppingAreaApp">
     <ul class="products" ng-controller="ProductsController">
         <li ng-repeat="product in products">
-            <img src="/assets/images/items/{{product.img}}" />
+            <img src="/public/assets/images/items/{{product.img}}" />
             <div class="price-tag">{{product.priceText}}</div>
         </li>
     </ul>
