--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <div class="shopping-area" ng-app="shoppingAreaApp">
     <ul class="products" ng-controller="ProductsController">
         <li ng-repeat="product in products">
-            <img src="{{product.img}}" />
+            <img ng-src="{{product.img}}" />
             <div class="price-tag">{{product.priceText}}</div>
         </li>
     </ul>
